--- a/package.json
+++ b/package.json
@@ -16,13 +16,25 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
+    "indent-string": "^5.0.0",
+    "node-sql-parser": "^4.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sirv": "^2.0.2",
+    "sql-formatter": "^12.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-ssr": "^0.4.112"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "serve": "^14.2.0",
+    "tailwindcss": "^3.3.1"
+  }
 }
