--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "indent-string": "^5.0.0",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "node-sql-parser": "^4.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
