--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "prettier": "^2.8.7",
     "serve": "^14.2.0",
     "tailwindcss": "^3.3.1"
-  }
+  },
+  "packageManager": "pnpm@8.14.3+sha1.872b21adeaae4e71acd5c551ba848d927d6aa446"
 }
