--- a/package.json
+++ b/package.json
@@ -3,41 +3,43 @@
     "dev": "npm run server",
     "prod": "npm run build && npm run server:prod",
     "build": "vite build",
-    "server": "ts-node ./server/index.ts",
-    "server:prod": "cross-env NODE_ENV=production ts-node ./server/index.ts"
+    "server": "tsx ./server/index.ts",
+    "server:prod": "cross-env NODE_ENV=production tsx ./server/index.ts"
   },
   "dependencies": {
-    "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@vitejs/plugin-react": "^3.0.0",
-    "compression": "^1.7.4",
-    "cross-env": "^7.0.3",
-    "express": "^4.18.1",
-    "indent-string": "^5.0.0",
-    "mobx": "^6.9.0",
-    "mobx-react-lite": "^3.4.3",
-    "node-sql-parser": "^4.6.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sirv": "^2.0.2",
-    "sql-formatter": "^12.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3",
-    "vite-plugin-ssr": "^0.4.112"
+    "@types/compression": "1.7.5",
+    "@types/express": "4.17.21",
+    "@types/node": "20.11.7",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@vitejs/plugin-react": "4.2.1",
+    "compression": "1.7.4",
+    "cross-env": "7.0.3",
+    "express": "4.18.2",
+    "indent-string": "5.0.0",
+    "lodash-es": "4.17.21",
+    "mobx": "6.12.0",
+    "mobx-react-lite": "4.0.5",
+    "node-sql-parser": "4.18.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sirv": "2.0.4",
+    "sql-formatter": "15.1.3",
+    "typescript": "5.3.3",
+    "vike": "0.4.160",
+    "vite": "5.0.12"
   },
   "type": "module",
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "serve": "^14.2.0",
-    "tailwindcss": "^3.3.1"
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.10",
+    "@types/lodash-es": "4.17.12",
+    "autoprefixer": "10.4.17",
+    "postcss": "8.4.33",
+    "prettier": "3.2.4",
+    "serve": "14.2.1",
+    "tailwindcss": "3.4.1",
+    "tsx": "4.7.0"
   },
   "packageManager": "pnpm@8.14.3+sha1.872b21adeaae4e71acd5c551ba848d927d6aa446"
 }
