--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "scripts": {
-    "dev": "npm run server",
-    "prod": "npm run build && npm run server:prod",
-    "build": "vite build",
-    "server": "tsx ./server/index.ts",
-    "server:prod": "cross-env NODE_ENV=production tsx ./server/index.ts"
-  },
-  "dependencies": {
-    "@types/compression": "1.7.5",
-    "@types/express": "4.17.21",
-    "@types/node": "22.10.1",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "@vitejs/plugin-react": "4.3.4",
-    "compression": "1.7.5",
-    "cross-env": "7.0.3",
-    "express": "4.21.1",
-    "indent-string": "5.0.0",
-    "lodash-es": "4.17.21",
-    "mobx": "6.13.5",
-    "mobx-react-lite": "4.0.7",
-    "node-sql-parser": "4.18.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "sirv": "3.0.0",
-    "sql-formatter": "15.4.6",
-    "typescript": "5.7.2",
-    "vike": "0.4.206",
-    "vite": "6.0.2"
-  },
-  "type": "module",
-  "devDependencies": {
-    "@tailwindcss/forms": "0.5.9",
-    "@tailwindcss/typography": "0.5.15",
-    "@types/lodash-es": "4.17.12",
-    "autoprefixer": "10.4.20",
-    "postcss": "8.4.49",
-    "prettier": "3.4.1",
-    "serve": "14.2.4",
-    "tailwindcss": "3.4.15",
-    "tsx": "4.19.2"
-  },
-  "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
+	"scripts": {
+		"build": "react-router build",
+		"dev": "react-router dev",
+		"start": "react-router-serve ./build/server/index.js",
+		"typecheck": "react-router typegen && tsc --build --noEmit"
+	},
+	"dependencies": {
+		"@react-router/node": "7.0.2",
+		"@react-router/serve": "7.0.2",
+		"@types/compression": "1.7.5",
+		"@types/express": "4.17.21",
+		"@types/node": "22.10.1",
+		"@types/react": "18.3.12",
+		"@types/react-dom": "18.3.1",
+		"@vitejs/plugin-react": "4.3.4",
+		"compression": "1.7.5",
+		"cross-env": "7.0.3",
+		"express": "4.21.1",
+		"indent-string": "5.0.0",
+		"isbot": "^5",
+		"lodash-es": "4.17.21",
+		"mobx": "6.13.5",
+		"mobx-react-lite": "4.0.7",
+		"node-sql-parser": "4.18.0",
+		"react": "18.3.1",
+		"react-dom": "18.3.1",
+		"react-router": "7.0.2",
+		"sirv": "3.0.0",
+		"sql-formatter": "15.4.6",
+		"typescript": "5.7.2",
+		"vite": "6.0.2"
+	},
+	"type": "module",
+	"devDependencies": {
+		"@react-router/dev": "7.0.2",
+		"@tailwindcss/forms": "0.5.9",
+		"@tailwindcss/typography": "0.5.15",
+		"@types/lodash-es": "4.17.12",
+		"autoprefixer": "10.4.20",
+		"postcss": "8.4.49",
+		"prettier": "3.4.1",
+		"serve": "14.2.4",
+		"tailwindcss": "3.4.15",
+		"tsx": "4.19.2",
+		"vite-tsconfig-paths": "5.1.3",
+		"wrangler": "3.91.0"
+	},
+	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
