--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"express": "4.21.1",
 		"indent-string": "5.0.0",
 		"isbot": "^5",
+		"kysely": "0.27.4",
 		"lodash-es": "4.17.21",
 		"mobx": "6.13.5",
 		"mobx-react-lite": "4.0.7",
@@ -28,6 +29,7 @@
 		"react-router": "7.0.2",
 		"sirv": "3.0.0",
 		"sql-formatter": "15.4.6",
+		"sqlocal": "0.13.0",
 		"typescript": "5.7.2",
 		"vite": "6.0.2"
 	},
