switch to regular workers

--- a/package.json
+++ b/package.json
@@ -3,50 +3,47 @@
 		"build": "react-router build",
 		"dev": "react-router dev",
 		"start": "react-router-serve ./build/server/index.js",
-		"typecheck": "react-router typegen && tsc --build --noEmit"
+		"typecheck": "react-router typegen && tsc --build --noEmit",
+		"deploy": "wrangler deploy"
 	},
 	"dependencies": {
-		"@react-router/node": "7.0.2",
-		"@react-router/serve": "7.0.2",
-		"@types/compression": "1.7.5",
-		"@types/express": "4.17.21",
-		"@types/node": "22.10.1",
-		"@types/react": "18.3.12",
-		"@types/react-dom": "18.3.1",
-		"@vitejs/plugin-react": "4.3.4",
-		"compression": "1.7.5",
+		"@react-router/node": "7.5.2",
+		"@react-router/serve": "7.5.2",
+		"@types/node": "22.15.2",
+		"@types/react": "19.1.2",
+		"@types/react-dom": "19.1.2",
+		"@vitejs/plugin-react": "4.4.1",
 		"cross-env": "7.0.3",
-		"express": "4.21.1",
 		"indent-string": "5.0.0",
-		"isbot": "^5",
-		"kysely": "0.27.4",
+		"isbot": "^5.1.27",
+		"kysely": "0.28.2",
 		"lodash-es": "4.17.21",
-		"mobx": "6.13.5",
-		"mobx-react-lite": "4.0.7",
-		"node-sql-parser": "4.18.0",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-router": "7.0.2",
-		"sirv": "3.0.0",
-		"sql-formatter": "15.4.6",
-		"sqlocal": "0.13.0",
-		"typescript": "5.7.2",
-		"vite": "6.0.2"
+		"mobx": "6.13.7",
+		"mobx-react-lite": "4.1.0",
+		"node-sql-parser": "5.3.8",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-router": "7.5.2",
+		"sql-formatter": "15.6.1",
+		"sqlocal": "0.14.0",
+		"typescript": "5.8.3",
+		"vite": "6.3.3"
 	},
 	"type": "module",
 	"devDependencies": {
-		"@react-router/dev": "7.0.2",
-		"@tailwindcss/forms": "0.5.9",
-		"@tailwindcss/typography": "0.5.15",
+		"@react-router/dev": "7.5.2",
+		"@tailwindcss/forms": "0.5.10",
+		"@tailwindcss/postcss": "4.1.4",
+		"@tailwindcss/typography": "0.5.16",
+		"@tailwindcss/vite": "4.1.4",
 		"@types/lodash-es": "4.17.12",
-		"autoprefixer": "10.4.20",
-		"postcss": "8.4.49",
-		"prettier": "3.4.1",
+		"postcss": "8.5.3",
+		"prettier": "3.5.3",
 		"serve": "14.2.4",
-		"tailwindcss": "3.4.15",
-		"tsx": "4.19.2",
-		"vite-tsconfig-paths": "5.1.3",
-		"wrangler": "3.91.0"
+		"tailwindcss": "4.1.4",
+		"tsx": "4.19.3",
+		"vite-tsconfig-paths": "5.1.4",
+		"wrangler": "4.13.2"
 	},
-	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
+	"packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
